# amazon-scraper-api-sdk-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
amazonscraperapi/: __init__.py  client.py
