[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazonscraperapi-sdk"
version = "0.1.3"
description = "Official Python client for Amazon Scraper API (https://amazonscraperapi.com)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Amazon Scraper API", email = "support@amazonscraperapi.com" }]
requires-python = ">=3.9"
keywords = ["amazon", "scraper", "api", "product-data", "asin", "web-scraping"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://amazonscraperapi.com"
Documentation = "https://app.amazonscraperapi.com/docs"
Source = "https://github.com/ChocoData-com/amazon-scraper-api-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["amazonscraperapi"]
